Fix icon z-index issue

--- a/src/partials/AppBar.css
+++ b/src/partials/AppBar.css
@@ -1,5 +1,5 @@
 .mdl-app-bar-logo {
-    z-index: 100;
+    z-index: 25;
     background-color: #ec6248;
     height: 60px;
     width: 100%;
